# mcp-smart-proxy

./: AGENTS.md  Cargo.toml  README.md  build.rs  install.sh  publish.sh
.github/workflows/: release.yml
Formula/: msp.rb
scripts/: render-homebrew-formula.sh
src/: cli.rs  commands.rs  config.rs  console.rs  downstream_client.rs  fs_util.rs  main.rs  mcp_server.rs  paths.rs  reload.rs  remote.rs  types.rs  version_check.rs
src/commands/: add_cmd.rs  config_cmd.rs  import_cmd.rs  input_cmd.rs  mcp_cli.rs  provider.rs
src/config/: import_export.rs  local.rs  provider.rs  tests.rs
src/config/import_export/: claude.rs  codex.rs  common.rs  json_support.rs  opencode.rs  toml_support.rs
src/config/local/: remote_url.rs  schema.rs  update.rs
src/daemon/: logging.rs  mod.rs  runtime.rs
src/input_popup/: macos.rs  mod.rs  runner.rs  schema.rs  ui.rs  ui_stub.rs
src/mcp_server/: lua_eval.rs  mod.rs  server.rs  tests.rs  tools.rs
src/remote/: callback.rs  figma.rs  oauth.rs
swift/input_popup/: main.swift
